Assert going to Texture Paint workspace without a UVMap #81126

Closed
opened 2020-09-24 12:56:39 +02:00 by Philipp Oeser · 5 comments
Member

System Information
Operating system: Linux-5.8.4-200.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-24 09:56, hash: f564126cdf
Caused by d6525e8d13 I think

Short description of error
Assert going to Texture Paint workspace without a UVMap

Exact steps for others to reproduce the error
From the default startup file:

  • remove the UVMap from the default Cube
  • switch to Texture Paint workspace -->
BLI_assert failed: /blender/source/blender/draw/intern/draw_cache_impl_mesh.c:1147, drw_mesh_batch_cache_check_available(), at '!DRW_batch_requested(((GPUBatch **)&cache->batch)[i], 0)'

Sound rather harmless, just dropping this here so @Jeroen-Bakker is aware.

**System Information** Operating system: Linux-5.8.4-200.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-24 09:56, hash: `f564126cdf` Caused by d6525e8d13 I think **Short description of error** Assert going to Texture Paint workspace without a UVMap **Exact steps for others to reproduce the error** From the default startup file: - remove the `UVMap` from the default Cube - switch to `Texture Paint` workspace --> ``` BLI_assert failed: /blender/source/blender/draw/intern/draw_cache_impl_mesh.c:1147, drw_mesh_batch_cache_check_available(), at '!DRW_batch_requested(((GPUBatch **)&cache->batch)[i], 0)' ``` Sound rather harmless, just dropping this here so @Jeroen-Bakker is aware.
Author
Member

Added subscribers: @Jeroen-Bakker, @lichtwerk

Added subscribers: @Jeroen-Bakker, @lichtwerk
Jeroen Bakker was assigned by Philipp Oeser 2020-09-24 12:57:28 +02:00
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

This needs to be investigated, IMO it should still create a batch, but it should have an empty IndexBuffer. It could be that the current implementation doesn't following the architecture. The draw manger used to have some hacks in order to support rendering UVs in the old image editor. The new image editor should work fully in the architecture. That was one of the goals of that change.

This needs to be investigated, IMO it should still create a batch, but it should have an empty IndexBuffer. It could be that the current implementation doesn't following the architecture. The draw manger used to have some hacks in order to support rendering UVs in the old image editor. The new image editor should work fully in the architecture. That was one of the goals of that change.

This issue was referenced by 1a64f97b9e

This issue was referenced by 1a64f97b9e1227f67052a00c1eccc636e806c97d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81126
No description provided.