Fix T81126: Assert going to Texture Paint workspace without a UVMap

Assert happened as it could not create uv batches without an UVMap.
Solution is to only request those batches when the UVMaps are available.